src/yaml/dex/dex-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: dex
  name: dex
  namespace: auth
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      name: dex
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: dex
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: dex
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 50
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  name: dex
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - /usr/local/bin/dex
        - serve
        - /etc/dex/config/config.yaml
        image: quay.io/dexidp/dex:v2.15.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /.well-known/openid-configuration
            port: 5556
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: dex
        ports:
        - containerPort: 5556
          name: http
          protocol: TCP
        - containerPort: 5558
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /.well-known/openid-configuration
            port: 5556
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          runAsUser: 1001
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/dex/config
          name: config
        - mountPath: /web/templates/header.html
          name: dex-template
          subPath: header.html
        - mountPath: /etc/dex/tls
          name: tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
      serviceAccount: dex
      serviceAccountName: dex
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: dex
        name: config
      - configMap:
          defaultMode: 420
          name: dex-template
          items:
          - key: header.html
            path: header.html
        name: dex-template
      - name: tls
        secret:
          defaultMode: 420
          secretName: dex-tls
