src/yaml/dex/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: auth
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    name: dex
