src/yaml/dex/dex-ingressroute.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  labels:
    name: dex
  name: dex
  namespace: auth
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: dex
      port: 5556
  tcpproxy:
    services:
    - name: dex
      port: 5556
  virtualhost:
    fqdn: dex.evillgenius.com
    tls:
      passthrough: true
